estructure pug login and pugs header&footer

--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,12 @@ html
     head
         title= "Login"
     body
-        div
-            h1= "Login FreeLance Search"
-            p= "En desarrollo"
+        include ./header.pug
+        main
+            div
+                h2= "Login" 
+                form(action="/api/login")
+                    input(type="text" placeholder="Email")
+                    input(type="password" placeholder="Password")
+                    input(type="submit")
+        include ./footer.pug
