hecha vista home, header y corregido estilo menú

--- a/public/styles/hamburguesa.css
+++ b/public/styles/hamburguesa.css
@@ -2,11 +2,11 @@
     display: none;
 }
 
-input:checked  ~ div{
+#menu:checked  ~ div{
     display:block;
 }
 
-input {
+#menu {
     display:none;
 }
 
