--- a/views/header.pug
+++ b/views/header.pug
@@ -1,2 +1,14 @@
 header
-    p="Esto es el header"
+    nav 
+        input(
+            type="checkbox"
+            id="menu")
+        label(
+            for="menu"
+        ) ☰
+        div(
+            class="desplegable"
+        )  
+            a(href="/") Inicio 
+            a(href="/signup") Registrarse 
+            a(href="/login") Ingresar
