--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,7 @@ html
             div
                 h2= "Login" 
                 form(action="/api/login")
-                    input(type="text" placeholder="Email")
+                    input(type="email" placeholder="Email")
                     input(type="password" placeholder="Password")
                     input(type="submit")
         include ./footer.pug
