--- a/views/profile.pug
+++ b/views/profile.pug
@@ -16,7 +16,7 @@ html
 
             //- div
             //-     p= "Rellene los campos que quiera modificar:"
-            //-     form(action="/api/user")
+            //-     form(action="/api/user" method="POST")
             //-         input(type="text" placeholder="New Avatar url")
             //-         input(type="text" placeholder="New Name") 
             //-         input(type="email" placeholder="New Email")
