--- a/views/header.pug
+++ b/views/header.pug
@@ -6,9 +6,9 @@ header
         label(
             for="menu"
         ) ☰
-        div(
+        ul(
             class="desplegable"
         )  
-            a(href="/") Inicio 
-            a(href="/signup") Registrarse 
-            a(href="/login") Ingresar
+            a(href="/"): li  Inicio 
+            a(href="/signup"): li Registrarse 
+            a(href="/login"): li Ingresar
