--- a/views/login.pug
+++ b/views/login.pug
@@ -2,6 +2,8 @@ doctype html
 html
     head
         title= "Login"
+        style 
+            include ../public/styles/hamburguesa.css
     body
         include ./header.pug
         main
