--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,14 +2,18 @@ doctype html
 html
     head
         title= "DashBoard"
-    body   
-        div         
+        style 
+            include ../public/styles/hamburguesa.css
+    body
+        include ./header.pug   
+        div 
             a(href="ofert.url")
                 div
-                h3= "offertTitle" 
-                p= "offertSalary"
-                p= "company"
+                h3 "titulo" #{offertTitle}
+                p "salario" #{offertSalary}
+                p "empresa" #{company}
                 button(type="button" class="edit" onClick=nombreDeLaFuncion)= "Editar"
                 button(type="button" class="delete" onClick=nombreDeLaFuncion)= "Borrar"   
             div 
                 button="Crear nueva oferta"
+    include ./footer.pug
