--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -13,5 +13,5 @@ html
                         h3 "titulo" #{_offert.title}
                         p "salario" #{_offert.salary}
                         p "empresa" #{_offert.company}
-                            button(type="button" class="highlighted" onClick=quitarHighlight)="like"
+                            button(type="button" class="highlighted" onClick=quitarHighlight) like
     include ./footer.pug
