--- a/views/header.pug
+++ b/views/header.pug
@@ -12,3 +12,8 @@ header
             a(href="/"): li  Inicio 
             a(href="/signup"): li Registrarse 
             a(href="/login"): li Ingresar
+            a(href="/favorites"): li Ofertas favoritas 
+            a(href="/profile"): li Perfil de usuario 
+            a(href="/"): li Salir
+            a(href="/users"): li Listado de usuarios 
+            a(href="/dashboard"): li Crear oferta     
