--- a/views/signup.pug
+++ b/views/signup.pug
@@ -25,7 +25,7 @@ html
                 placeholder="Email")
             input(
                 type="password"
-                placeholder="contraseña")
+                placeholder="Contraseña")
             input(
                 type="submit"
                 value="Registrar") 
