--- a/views/users.pug
+++ b/views/users.pug
@@ -2,7 +2,23 @@ doctype html
 html
     head
         title= "Users"
+        style 
+            include ../public/styles/hamburguesa.css
     body
-        div 
-            h1= "Users FreeLance Search"
-            p= "En desarrollo"
+        include ./header.pug
+        div
+            each user in users
+                a(href="#")
+                    div
+                        h3 Nombre #{user.name}
+                        p Email #{user.email}
+                        p Contraseña #{user.password}
+                        p Administrador #{user.admin}
+                        p Fecha de alta #{user.date}
+                        p Avatar #{user.image}
+                        button(type="button" class="edit" onClick=funcionEditar) Editar Usuario
+                        button(type="button" class="delete" onClick=funcionEliminar) Eliminar Usuario 
+            a(href="signup"): button Crear usuario 
+        
+        include ./footer.pug
+
