--- a/views/signup.pug
+++ b/views/signup.pug
@@ -19,13 +19,16 @@ html
             method="POST")
             input(
                 type="text"
-                placeholder="Nombre de usuario")
+                placeholder="Nombre de usuario"
+                id="nombre")
             input(
                 type="email"
-                placeholder="Email")
+                placeholder="Email"
+                id="email")
             input(
                 type="password"
-                placeholder="Contraseña")
+                placeholder="Contraseña"
+                id="pass")
             input(
                 type="submit"
                 value="Registrar") 
