linkeado form a controller userApi

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -20,15 +20,15 @@ html
             input(
                 type="text"
                 placeholder="Nombre de usuario"
-                id="nombre")
+                name="nombre")
             input(
                 type="email"
                 placeholder="Email"
-                id="email")
+                name="email")
             input(
                 type="password"
                 placeholder="Contraseña"
-                id="pass")
+                name="pass")
             input(
                 type="submit"
                 value="Registrar") 
