--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -4,17 +4,19 @@ html
         title= "DashBoard"
         style 
             include ../public/styles/hamburguesa.css
+        script( src="/scripts/dashboard.js")
     body
-        include ./header.pug   
-        div 
-           each _offert in _offerts
-            a(href="#")
-                div
-                    h3 "titulo" #{_offert.title}
-                    p "salario" #{_offert.salary}
-                    p "empresa" #{_offert.company}
-                    button(type="button" class="edit" onClick=nombreDeLaFuncion) Editar
-                    button(type="button" class="delete" onClick=nombreDeLaFuncion) Borrar   
+        include ./header.pug
+        main   
+            div(id="root") 
+                each _offert in _offerts
+                    a(href="#")
+                        div
+                            h3 "titulo" #{_offert.title}
+                            p "salario" #{_offert.salary}
+                            p "empresa" #{_offert.company}
+                            button(type="button" class="edit" onClick=nombreDeLaFuncion) Editar
+                            button(type="button" class="delete" onClick=nombreDeLaFuncion) Borrar   
                 div 
-        button Crear nueva oferta
+                    button(onClick="newOffert()") Crear nueva oferta
     include ./footer.pug
