--- a/views/profile.pug
+++ b/views/profile.pug
@@ -4,17 +4,18 @@ html
         title= "Profile"
         style 
             include ../public/styles/hamburguesa.css
+            include ../public/styles/profile.css
     body
         include ./header.pug
         main
-            div 
+            div(class="containerdiv") 
                 h2= "Your profile"
                     div 
                         img(src='#{users.avatar}' alt="user avatar")
                         p Name: #{users.name}
                         p Email: #{users.email}
-                        p Miembro desde #{users.dateUp}
-                button(onclick="")= "Editar"
+                        p Miembro desde: #{users.dateUp}
+                button(class="send" onclick="")= "Editar"
 
             //- div
             //-     p= "Rellene los campos que quiera modificar:"
