--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,28 +4,37 @@ html
         title= "Sign Up"
         style 
             include ../public/styles/hamburguesa.css
+            include ../public/styles/signup.css
     body
         include ./header.pug
-        input(
-            type="submit"
-            value="Continuar con Facebook"
-            id="facebook")
-        input(
-            type="submit"
-            value="Continuar con Google"
-            id="google")
-        form(
-            action="/api/user"
-            method="POST")
-            input(
-                type="text"
-                placeholder="Nombre de usuario")
-            input(
-                type="email"
-                placeholder="Email")
-            input(
-                type="password"
-                placeholder="Contraseña")
-            input(
-                type="submit"
-                value="Registrar") 
+        div(class="containerdiv")
+            div(class="redes")
+                input(
+                    type="submit"
+                    value="Continuar con Facebook"
+                    id="facebook")
+                input(
+                    type="submit"
+                    value="Continuar con Google"
+                    id="google")
+            div(clas="userdata")
+                form(
+                    action="/api/user"
+                    method="POST")
+                    div(clas="data")
+                    input(
+                        type="text"
+                        placeholder="Nombre de usuario")
+                    div(clas="data")
+                    input(
+                        type="email"
+                        placeholder="Email")
+                    div(clas="data")
+                    input(
+                        type="password"
+                        placeholder="Contraseña")
+                    div(clas="data")
+                    input(
+                        type="submit"
+                        value="Registrar")
+        include ./footer.pug
