arregladas querys sql, scraping y creado rutas apiSQL

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -29,6 +29,10 @@ html
                 type="password"
                 placeholder="Contraseña"
                 name="pass")
+            input(
+                type="text"
+                placeholder="URL de la imagen"
+                name="img")
             button(
                 type="submit"
             ) Registrar
