--- a/views/home.pug
+++ b/views/home.pug
@@ -10,15 +10,15 @@ html
         main
             div(id =root)
                 form(
-                    action="/api/search"
+                    action="/api/search/home"
                     method="GET")  
                     input(
                         type="text"
                         id="buscar"
                         placeholder="Oferta")
-                    input(
+                    button(
                         type="submit"
-                        value="Buscar")
+                        value="home") Buscar
                 each _offert in data
                     a(href= _offert.url)
                         div
