Print data of Domestika scrapin

--- a/views/home.pug
+++ b/views/home.pug
@@ -13,6 +13,7 @@ html
                     action="/api/search/home"
                     method="GET")  
                     input(
+                        name="search"
                         type="text"
                         id="buscar"
                         placeholder="Oferta")
