--- a/views/profile.pug
+++ b/views/profile.pug
@@ -13,7 +13,7 @@ html
                 h2= "Your profile"
                     div 
                         img(src='#{users.avatar}' alt="user avatar")
-                        p Name: #{users.name}
+                        p Nombre: #{users.name}
                         p Email: #{users.email}
                         p Miembro desde: #{users.dateUp}
                 button(class="send" onclick="editMode()")= "Editar"
