--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         title= "Favorites"
         style 
             include ../public/styles/hamburguesa.css
@@ -12,7 +13,9 @@ html
                 a(href="ofert.url")
                 div(class="eachOffer")
                     h3 "titulo" #{_offert.title}
+                        a(id="favoriteIcon" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css") 
+                            i.fas.fa-star
                     p "salario" #{_offert.salary}
                     p "empresa" #{_offert.company}
-                        button(type="button" class="highlighted" onClick=quitarHighlight) like
+                    
     include ./footer.pug
