muestra ofertas favoritas

--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -12,10 +12,10 @@ html
             each _offert in _offerts
                 a(href="ofert.url")
                 div(class="eachOffer")
-                    h3 "titulo" #{_offert.title}
+                    h3 Título: #{_offert.title}
                         a(id="favoriteIcon" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css") 
                             i.fas.fa-star
-                    p "salario" #{_offert.salary}
-                    p "empresa" #{_offert.company}
+                    p Salario: #{_offert.salary}
+                    p Empresa: #{_offert.company}
                     
     include ./footer.pug
