--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -10,12 +10,12 @@ html
         include ./header.pug
         div
             each _offert in _offerts
-                a(href="ofert.url")
-                div(class="eachOffer")
-                    h3 Título: #{_offert.title}
-                        a(id="favoriteIcon" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css") 
-                            i.fas.fa-star
-                    p Salario: #{_offert.salary}
-                    p Empresa: #{_offert.company}
+                a(href=_offert.url)
+                    div(class="eachOffer")                     
+                        h3 Título: #{_offert.title}
+                        button(id="favoriteIcon") 
+                            i.fas.fa-star(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css")
+                        p Salario: #{_offert.salary}
+                        p Empresa: #{_offert.company}
                     
     include ./footer.pug
