--- a/views/users.pug
+++ b/views/users.pug
@@ -10,12 +10,13 @@ html
             each user in users
                 a(href="#")
                     div
-                        h3 Nombre #{user.name}
-                        p Email #{user.email}
-                        p Contraseña #{user.password}
-                        p Administrador #{user.admin}
-                        p Fecha de alta #{user.date}
-                        p Avatar #{user.image}
+                        h3 Nombre: #{user.nombre}
+                        p Email: #{user.email}
+                        p Contraseña: #{user.pass}
+                        p Administrador: #{user.administrador}
+                        p Fecha de alta: #{user.fecha}
+                        p Avatar:
+                        img(src=user.img alt="Avatar del usuario")
                         button(type="button" class="edit" onClick=funcionEditar) Editar Usuario
                         button(type="button" class="delete" onClick=funcionEliminar) Eliminar Usuario 
             a(href="signup"): button Crear usuario 
