add general.css (include body,header,main&footer)

--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -4,18 +4,20 @@ html
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         title= "Favorites"
         style 
-            include ../public/styles/hamburguesa.css
+            include ../public/styles/normalize.css
+            include ../public/styles/general.css
             include ../public/styles/favorites.css
     body
         include ./header.pug
-        div
-            each _offert in _offerts
-                a(href=_offert.url)
-                    div(class="eachOffer")                     
-                        h3 Título: #{_offert.title}
-                        button(id="favoriteIcon") 
-                            i.fas.fa-star(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css")
-                        p Salario: #{_offert.salary}
-                        p Empresa: #{_offert.company}
+        main
+            div(id= "root")
+                each _offert in _offerts
+                    a(href=_offert.url)
+                        div(class="eachOffer")                     
+                            h3 Título: #{_offert.title}
+                            button(id="favoriteIcon") 
+                                i.fas.fa-star(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css")
+                            p Salario: #{_offert.salary}
+                            p Empresa: #{_offert.company}
                     
     include ./footer.pug
