--- a/views/profile.pug
+++ b/views/profile.pug
@@ -3,7 +3,8 @@ html
     head
         title= "Profile"
         style 
-            include ../public/styles/hamburguesa.css
+            include ../public/styles/normalize.css
+            include ../public/styles/general.css
             include ../public/styles/profile.css
         script( src="/scripts/profile.js")
     body
