--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,16 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Comfortaa:wght@700&family=M+PLUS+2:wght@200;300&family=Montserrat&family=Open+Sans:wght@800&family=Oswald&family=Outfit:wght@300;700&family=Poppins:wght@400;900&family=Quicksand&family=Raleway:wght@300;900&family=Roboto&display=swap');
 
-form {
-    margin-top: 3rem;
+#buscar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: -2vh;
+    margin-top: -1vh;
+    color:rgba(16, 0, 59, 0.952);
 }
 
-input {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
+input{
+    height: 3vh;
     border-style: solid;
     border-color: rgba(16, 0, 59, 0.952);
-    border-radius: 4px;
+    border-radius: 0.5vh;
+    border-width: 0.2vh;
+    background-color: rgba(255, 255, 255, 0.25);
+    font-size: 2vh;
+    font-family: 'Montserrat', sans-serif;
+    text-indent: 1vh;
 }
-#buscar {
-    color:rgba(16, 0, 59, 0.952);
+button{
+    height: 4vh;
+    width: 25vw;
+    border-radius: 0.5vh;
+    font-size: 3vh;
+}
+div#searchs{
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
 }
