--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -3,7 +3,8 @@ html
     head
         title= "DashBoard"
         style 
-            include ../public/styles/hamburguesa.css
+            include ../public/styles/normalize.css
+            include ../public/styles/general.css
             include ../public/styles/dashboard.css
         script( src="/scripts/dashboard.js")
     body
