--- a/views/home.pug
+++ b/views/home.pug
@@ -11,12 +11,12 @@ html
         include ./header.pug
         main
             div(id= "root")
-                div(id= "buscar")
+                div(id= "busqueda")
                     input(
                         name="search"
                         type="text"
-                        placeholder="Oferta")
-                        //- id="buscar"
+                        placeholder="Oferta"
+                        id="buscar")
                     button(
                         type="submit"
                         value="home"
